syntax = "proto3";

package auth;

service PublicApi {
    rpc SignUp (SignUpRequest) returns (SignUpResponse);
    rpc SignIn (SignInRequest) returns (SignInResponse);
}

message SignUpRequest {
    string email = 1;
    string password = 2;
    string username = 3;
}

message SignInRequest {
    string email = 1;
    string password = 2;
}

message SignUpResponse {
    User user = 1;
    string Message = 2;
}

message SignInResponse {
    User user = 1;
    string Message = 2;
}

message User {
    string id = 1;
    string email = 2;
    string username = 3;
}
